# CHiME9-ECHI

./: Quickstart.ipynb  README.md  pyproject.toml  run_train.py
config/: paths.yaml  shared.yaml
config/train/: main_ha.yaml
lab1/: PT_Part1_Intro.ipynb
