[project]
name = "chime9-echi"
version = "0.1.0"
description = "Baselines for the ECHI task of the CHiME-9 challenge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core",
    "types-pyyaml",
    "versa-speech-audio-toolkit",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
versa-speech-audio-toolkit = { git = "https://github.com/wavlab-speech/versa" }

